Evaluate the variability of the samples (clicks/second)

--- a/Analysis/03_variability_of_samples_analysed_4_clicks_per_second.Rmd
+++ b/Analysis/03_variability_of_samples_analysed_4_clicks_per_second.Rmd
@@ -60,7 +60,7 @@ sampledata<-sampledata[sampledata$rsecs>=0&!is.na(sampledata$clicks),]
 
 # Data subset and treatment for each whale
 
-We subset the data in order check the CV for each whale
+We subset the data in order check the CV for each whale.
 
 ## Freya
 
