--- a/Analysis/03_variability_of_samples_analysed_4_clicks_per_second.Rmd
+++ b/Analysis/03_variability_of_samples_analysed_4_clicks_per_second.Rmd
@@ -852,7 +852,7 @@ ggplot(cvdatama1,aes(x=numb,y=mean))+
 
 
 
-## Plotting results with all of the narwhals
+## Plotting results with all of the narwhals / Figure 3
 
 ```{r}
 cvdatama1$whale<-"Mára"
@@ -889,6 +889,9 @@ ggplot(data=ddata,aes(x=numb,y=cv,color=whale))+
         legend.text= element_text(size=19),
         plot.title = element_text(size=20),
         strip.text.x = element_text(size = 21))
+
+
+ggsave("Figures/Figure3.jpeg",dpi=600)
 ```
 
 
